--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '8'
-          distribution: 'azul'
+          distribution: 'adopt'
       - name: Run server tests
         run: ./gradlew :server:test
 
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '8'
-          distribution: 'azul'
+          distribution: 'adopt'
       -name: Prepare environment
         env:
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
