--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -18,11 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
-          java-version: '15'
           distribution: 'zulu'
+          java-version: '11'
       - name: Run server tests
         run: ./gradlew :server:test
 
@@ -30,11 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
-          java-version: '15'
           distribution: 'zulu'
+          java-version: '11'
       -name: Prepare environment
         env:
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
