--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -6,11 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
-          java-version: '8'
-          distribution: 'azul'
+          distribution: 'zulu'
+          java-version: '15'
       - name: Build with Gradle
         run: ./gradlew :server:build
 
@@ -21,7 +20,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: '11'
+          java-version: '15'
       - name: Run server tests
         run: ./gradlew :server:test
 
@@ -32,8 +31,8 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: '11'
-      -name: Prepare environment
+          java-version: '15'
+      - name: Prepare environment
         env:
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
         run: echo $GRADLE_PROPERTIES > gradle.properties
