--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -37,6 +37,6 @@ jobs:
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
         run: echo $GRADLE_PROPERTIES > gradle.properties
       - name: Test
-        run: cat gradle.properties
+        run: head -1 gradle.properties
       - name: Deploy GraphQL-ktx library
         run: ./gradlew :graphql-ktx:publishToSonatype
