--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -34,7 +34,8 @@ jobs:
           java-version: '15'
       - name: Prepare environment
         env:
-          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIESTOTO }}
+          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
+          GRADLE_PROPERTIESTOTO: ${{ secrets.GRADLE_PROPERTIESTOTO }}
         run: echo $GRADLE_PROPERTIES > gradle.properties
       - name: Deploy GraphQL-ktx library
         run: ./gradlew :graphql-ktx:publishToSonatype
