--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -14,6 +14,7 @@ jobs:
         run: ./gradlew :server:build
 
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +26,7 @@ jobs:
         run: ./gradlew :server:test
 
   deploy-graphql-ktx:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -40,3 +42,39 @@ jobs:
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy GraphQL-ktx library
         run: ./gradlew :graphql-ktx:publishToSonatype
+
+  deploy-server:
+    needs: deploy-graphql-ktx
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '15'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy server library
+        run: ./gradlew :server:publishToSonatype
+
+  deploy-server-ktor:
+    needs: deploy-server
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '15'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy Server Ktor library
+        run: ./gradlew :server-ktor:publishToSonatype
