fix(): Clean build.gradle.kts

--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -24,3 +24,57 @@ jobs:
           java-version: '15'
       - name: Run server tests
         run: ./gradlew :server:test
+
+  deploy-graphql-ktx:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '15'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy GraphQL-ktx library
+        run: ./gradlew :graphql-ktx:publishToSonatype
+
+  deploy-server:
+    needs: deploy-graphql-ktx
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '15'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy server library
+        run: ./gradlew :server:publishToSonatype
+
+  deploy-server-ktor:
+    needs: deploy-server
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '15'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy Server Ktor library
+        run: ./gradlew :server-ktor:publishToSonatype
