--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -41,7 +41,7 @@ jobs:
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy GraphQL-ktx library
-        run: cd graphql-ktx && ../gradlew :publishToSonatype
+        run: ./gradlew :graphql-ktx:publishToSonatype
 
   deploy-server:
     needs: deploy-graphql-ktx
@@ -59,7 +59,7 @@ jobs:
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy server library
-        run: cd server && ../gradlew :publishToSonatype
+        run: ./gradlew :server:publishToSonatype
 
   deploy-server-ktor:
     needs: deploy-server
@@ -77,4 +77,4 @@ jobs:
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy Server Ktor library
-        run: cd server-ktor && ../gradlew :publishToSonatype
+        run: ./gradlew :server-ktor:publishToSonatype
