--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -6,22 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 15
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: '15'
-          distribution: 'adopt'
       - name: Build with Gradle
         run: ./gradlew :server:build
 
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 15
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: '15'
-          distribution: 'adopt'
       - name: Run server tests
         run: ./gradlew :server:test
