--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
         run: git submodules init && git submodules update
       - uses: actions/setup-java@v2
         with:
