--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
         run: git submodules init && git submodules update
       - uses: actions/setup-java@v2
         with:
@@ -19,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
         run: git submodules init && git submodules update
       - uses: actions/setup-java@v2
         with:
@@ -32,6 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
         run: git submodules init && git submodules update
       - uses: actions/setup-java@v2
         with:
@@ -50,6 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
         run: git submodules init && git submodules update
       - uses: actions/setup-java@v2
         with:
