--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -18,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
