--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -18,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -30,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -37,7 +43,6 @@ jobs:
       - name: Prepare environment
         env:
           GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
-          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy server library
@@ -48,6 +53,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -55,7 +62,6 @@ jobs:
       - name: Prepare environment
         env:
           GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
-          GRADLE_PROPERTIESTOTO: ${{secrets.GRADLE_PROPERTIESTOTO}}
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy Server Ktor library
