--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -28,3 +28,22 @@ jobs:
           java-version: '17'
       - name: Run server tests
         run: ./gradlew :server:test
+
+  deploy-server:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy server library
+        run: cd server/ && ./gradlew :server:publishToSonatype
