--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-GPG_SECRET=
-GPG_PASSPHRASE=
+GPG_SECRET=AD763234099C11A829B8990E67FEF0D72C1529BC
+GPG_PASSPHRASE=Qwerty1234
 SONATYPE_USERNAME=
 SONATYPE_PASSWORD=
