--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -66,3 +66,22 @@ jobs:
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy Server Ktor library
         run: cd server-ktor/ && ../gradlew :server-ktor:publishToSonatype
+
+  deploy-codegen-plugin:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup submodules
+        run: git submodule init && git submodule update
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Prepare environment
+        env:
+          GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
+        shell: bash
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
+      - name: Deploy codegen plugin
+        run: cd server/ && ../gradlew :codegen:publishToSonatype
