--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -82,6 +82,6 @@ jobs:
         env:
           GRADLE_PROPERTIES: ${{secrets.GRADLE_PROPERTIES}}
         shell: bash
-        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties && cat gradle.properties'
+        run: 'echo "$GRADLE_PROPERTIES" > gradle.properties && cat gradle.properties | tr = _'
       - name: Deploy codegen plugin
         run: cd server/ && ../gradlew :codegen:publishPluginMavenPublicationToSonatypeRepository
