--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy server library
-        run: cd server/ && ../gradlew :server:publishToSonatype :server:closeAndReleaseStagingRepository
+        run: cd server/ && ../gradlew :server:publishToSonatype
 
   deploy-server-ktor:
     needs: deploy-server
@@ -67,7 +67,7 @@ jobs:
         shell: bash
         run: 'echo "$GRADLE_PROPERTIES" > gradle.properties'
       - name: Deploy Server Ktor library
-        run: cd server-ktor/ && ../gradlew :server-ktor:publishToSonatype :server-ktor:closeAndReleaseStagingRepository
+        run: cd server-ktor/ && ../gradlew :server-ktor:publishToSonatype
 
   deploy-codegen-plugin:
     needs: test
